--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -9,7 +9,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\AssetWizard.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="include\Gizmos.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ImGuiLayer.h">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\LevelEditorScene.h">
@@ -18,15 +24,27 @@
     <ClInclude Include="include\LevelEditorSystem.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\MenuBar.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cpp\AssetWizard.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
     <ClCompile Include="cpp\Gizmos.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\ImGuiLayer.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
     <ClCompile Include="cpp\LevelEditorScene.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
     <ClCompile Include="cpp\LevelEditorSystem.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\MenuBar.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
     <ClCompile Include="cpp\app.cpp">
