Begin project creation wizard

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -42,8 +42,13 @@ Pos=1066,205
 Size=771,416
 Collapsed=0
 
+[Window][Create New Project]
+Pos=505,314
+Size=1078,424
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=307,394 Size=1920,1038 Split=X
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=111,198 Size=1920,1038 Split=X
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=2729,1993 Split=X
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=727,1997 Selected=0xE927CF2F
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=635,1997 CentralNode=1 Selected=0xAE7BB42F
