Begin custom styles

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=0,42
-Size=1364,1038
+Pos=913,38
+Size=2071,1997
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1366,564
-Size=554,516
+Pos=2986,38
+Size=854,1997
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Demo]
-Pos=0,42
-Size=727,1038
+Pos=0,38
+Size=911,1997
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene]
-Pos=1366,42
-Size=554,520
+Pos=2986,38
+Size=854,1997
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,1
 
 [Window][Settings]
-Pos=815,539
-Size=495,214
+Pos=745,244
+Size=595,317
 Collapsed=0
 
 [Window][Gizmo debug]
@@ -48,11 +48,9 @@ Size=1078,424
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=111,198 Size=1920,1038 Split=X
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=2729,1993 Split=X
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=727,1997 Selected=0xE927CF2F
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=635,1997 CentralNode=1 Selected=0xAE7BB42F
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1109,1993 Split=Y Selected=0x18B8C0DE
-    DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=739,999 Selected=0x18B8C0DE
-    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=739,992 Selected=0xF02CD328
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,83 Size=3840,1997 Split=X
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1491,1993 Split=X
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=911,1997 Selected=0xE927CF2F
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=2071,1997 CentralNode=1 Selected=0xAE7BB42F
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=427,1993 Selected=0xF02CD328
 
