Add font awesome, begin path library, begin file browser

--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -27,6 +27,8 @@
     <ClInclude Include="include\MenuBar.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\AssetWindow.h" />
+    <ClInclude Include="include\FontAwesome.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\AssetWizard.cpp">
@@ -50,5 +52,6 @@
     <ClCompile Include="cpp\app.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\AssetWindow.cpp" />
   </ItemGroup>
 </Project>
