--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -10,25 +10,25 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,44
-Size=3002,1991
+Size=2850,1390
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=3004,44
-Size=836,1991
+Pos=2852,44
+Size=988,1991
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Dear ImGui Demo]
-Pos=0,44
-Size=774,1991
+Pos=-356,-312
+Size=774,1036
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene]
-Pos=3004,44
-Size=836,1991
+Pos=2852,44
+Size=988,1991
 Collapsed=0
 DockId=0x00000007,0
 
@@ -47,10 +47,18 @@ Pos=505,314
 Size=1078,424
 Collapsed=0
 
+[Window][Assets]
+Pos=0,1436
+Size=2850,599
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,89 Size=3840,1991 Split=X
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=3002,1993 Split=X
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=774,1997 Selected=0xE927CF2F
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=2203,1997 CentralNode=1 Selected=0xAE7BB42F
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=836,1993 Selected=0xF02CD328
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,89 Size=3840,1991 Split=X
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=2850,1993 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=774,1997 Selected=0xE927CF2F
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=2203,1997 Split=Y Selected=0xAE7BB42F
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=2850,1390 CentralNode=1 Selected=0xAE7BB42F
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=2850,599 Selected=0x7E7D78B8
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=988,1993 Selected=0xF02CD328
 
