Add rough resource management system UNSTABLE BUILD

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=0,44
-Size=1424,658
+Pos=915,40
+Size=1904,1430
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1426,44
-Size=494,1036
+Pos=2985,56
+Size=855,1129
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=-356,-312
-Size=774,1036
+Pos=0,40
+Size=913,1430
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene]
-Pos=1426,44
-Size=494,1036
+Pos=2985,1126
+Size=855,909
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Settings]
-Pos=1397,362
-Size=595,317
+Pos=1114,511
+Size=787,329
 Collapsed=0
 
 [Window][Gizmo debug]
@@ -48,17 +48,35 @@ Size=1078,424
 Collapsed=0
 
 [Window][Assets]
-Pos=0,704
-Size=1424,376
+Pos=0,1472
+Size=2819,563
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][ Inspector]
+Pos=2821,40
+Size=1019,1060
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][ Scene]
+Pos=2821,1102
+Size=1019,933
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=718,464 Size=1920,1036 Split=X
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=2850,1993 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=774,1997 Selected=0xE927CF2F
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=2203,1997 Split=Y Selected=0xAE7BB42F
-      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=2850,658 CentralNode=1 Selected=0xAE7BB42F
-      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=2850,376 Selected=0x7E7D78B8
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=988,1993 Selected=0xF02CD328
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=2819,1979 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=3840,1419 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=913,1997 Selected=0xE927CF2F
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1904,1997 CentralNode=1 Selected=0xAE7BB42F
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=3840,558 Selected=0x7E7D78B8
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1019,1979 Split=Y Selected=0xF02CD328
+    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=684,1129 Selected=0xF02CD328
+    DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=684,848 Split=Y Selected=0x18B8C0DE
+      DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=427,1076 Split=Y Selected=0x57F8A5EA
+        DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=855,1056 Selected=0x57F8A5EA
+        DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=855,929 Selected=0xA259292F
+      DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=427,909 Selected=0x18B8C0DE
 
