--- a/JadeEngine/JadeEngine.vcxproj.filters
+++ b/JadeEngine/JadeEngine.vcxproj.filters
@@ -166,6 +166,9 @@
     <ClInclude Include="include\jade\core\AssetManager.h">
       <Filter>include\jade\core</Filter>
     </ClInclude>
+    <ClInclude Include="include\jade\core\Audio.h">
+      <Filter>include\jade\core</Filter>
+    </ClInclude>
     <ClInclude Include="include\jade\core\Core.h">
       <Filter>include\jade\core</Filter>
     </ClInclude>
@@ -203,6 +206,9 @@
       <Filter>include\jade\file</Filter>
     </ClInclude>
     <ClInclude Include="include\jade\file\InputArchive.h">
+      <Filter>include\jade\file</Filter>
+    </ClInclude>
+    <ClInclude Include="include\jade\file\JPath.h">
       <Filter>include\jade\file</Filter>
     </ClInclude>
     <ClInclude Include="include\jade\file\OutputArchive.h">
@@ -1390,8 +1396,6 @@
     <ClInclude Include="vendor\nlohmann-json\single_include\nlohmann\json.hpp">
       <Filter>vendor\nlohmann-json\single_include\nlohmann</Filter>
     </ClInclude>
-    <ClInclude Include="include\jade\file\JPath.h" />
-    <ClInclude Include="include\jade\core\Audio.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\jade\commands\CommandHistory.cpp">
@@ -1428,6 +1432,9 @@
       <Filter>cpp\jade\file</Filter>
     </ClCompile>
     <ClCompile Include="cpp\jade\file\IFileDialog.cpp">
+      <Filter>cpp\jade\file</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\jade\file\JPath.cpp">
       <Filter>cpp\jade\file</Filter>
     </ClCompile>
     <ClCompile Include="cpp\jade\file\Win32File.cpp">
@@ -1487,6 +1494,5 @@
     <ClCompile Include="cpp\platform\windows\Win32Window.cpp">
       <Filter>cpp\platform\windows</Filter>
     </ClCompile>
-    <ClCompile Include="cpp\jade\file\JPath.cpp" />
   </ItemGroup>
 </Project>
