--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="include\ImGuiLayer.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\JadeEditorApplication.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="include\LevelEditorScene.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -33,8 +36,9 @@
     <ClInclude Include="include\MenuBar.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\JadeEditorApplication.h" />
-    <ClInclude Include="include\ProjectWizard.h" />
+    <ClInclude Include="include\ProjectWizard.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\AssetWindow.cpp">
@@ -49,6 +53,9 @@
     <ClCompile Include="cpp\ImGuiLayer.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\JadeEditorApplication.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
     <ClCompile Include="cpp\LevelEditorScene.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
@@ -58,9 +65,8 @@
     <ClCompile Include="cpp\MenuBar.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
-    <ClCompile Include="cpp\JadeEditorApplication.cpp">
+    <ClCompile Include="cpp\ProjectWizard.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
-    <ClCompile Include="cpp\ProjectWizard.cpp" />
   </ItemGroup>
 </Project>
