--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1920,1080
 Collapsed=0
 
@@ -43,7 +42,7 @@ Size=1083,522
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=219,330 Size=1920,1040 Split=X
+DockSpace     ID=0x3BC79352 Pos=503,588 Size=1920,1040 Split=X
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,680 Selected=0xAE7BB42F
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,358 Selected=0x7E7D78B8
