--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "JadeEngine/vendor/nlohmann-json"]
 	path = JadeEngine/vendor/nlohmann-json
 	url = https://github.com/ambrosiogabe/json
+[submodule "JadeEngine/vendor/enttVendor"]
+	path = JadeEngine/vendor/enttVendor
+	url = https://github.com/skypjack/entt
