--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1920,1080
 Collapsed=0
 
@@ -20,33 +21,32 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1445,626
-Size=475,454
+Pos=1445,1048
+Size=475,32
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][ Inspector]
 Pos=1445,40
-Size=475,584
+Size=475,1006
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
-Pos=0,0
 Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=538,197
+Pos=500,192
 Size=1083,522
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=503,588 Size=1920,1040 Split=X
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=307,392 Size=1920,1040 Split=X
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,680 Selected=0xAE7BB42F
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,358 Selected=0x7E7D78B8
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,584 Selected=0x57F8A5EA
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,454 CentralNode=1 Selected=0xA259292F
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xA259292F
 
