--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1920,1080
+Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,39 +9,40 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=1443,680
+Size=2888,1306
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,722
-Size=1443,358
+Pos=0,1348
+Size=2888,687
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1445,1048
-Size=475,32
+Pos=2890,1090
+Size=950,945
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][ Inspector]
-Pos=1445,40
-Size=475,1006
+Pos=2890,40
+Size=950,1048
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
+Pos=0,0
 Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=500,192
+Pos=512,212
 Size=1083,522
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=307,392 Size=1920,1040 Split=X
+DockSpace     ID=0x3BC79352 Pos=0,85 Size=3840,1995 Split=X
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,680 Selected=0xAE7BB42F
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,358 Selected=0x7E7D78B8
