--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpace Demo]
+Pos=0,0
 Size=3840,2035
 Collapsed=0
 
@@ -9,13 +10,13 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=2888,1306
+Size=2888,1341
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,1348
-Size=2888,687
+Pos=0,1383
+Size=2888,652
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,20 +33,20 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
-Pos=0,0
+Pos=-781,-372
 Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=512,212
+Pos=-269,-160
 Size=1083,522
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=0,85 Size=3840,1995 Split=X
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,680 Selected=0xAE7BB42F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,358 Selected=0x7E7D78B8
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xA259292F
