--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -9,10 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=0,40
-Size=2888,1341
+Pos=858,40
+Size=2030,1341
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][Assets]
 Pos=0,1383
@@ -33,7 +33,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
-Pos=-781,-372
+Pos=100,-58
 Size=1920,1080
 Collapsed=0
 
@@ -42,12 +42,20 @@ Pos=-269,-160
 Size=1083,522
 Collapsed=0
 
+[Window][Dear ImGui Demo]
+Pos=0,40
+Size=856,1341
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xA259292F
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Split=X Selected=0xAE7BB42F
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=856,1341 Selected=0xE927CF2F
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=2030,1341 Selected=0xAE7BB42F
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xA259292F
 
