--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -21,9 +21,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\AssetWindow.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\AssetWizard.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -65,11 +62,11 @@
     </ClInclude>
     <ClInclude Include="include\Gui\ImGuiHeader.h" />
     <ClInclude Include="include\Util\Settings.h" />
+    <ClInclude Include="include\EditorWindows\AssetWindow.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cpp\AssetWindow.cpp">
-      <Filter>cpp</Filter>
-    </ClCompile>
     <ClCompile Include="cpp\AssetWizard.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
@@ -106,6 +103,9 @@
     <ClCompile Include="cpp\Util\Settings.cpp" />
     <ClCompile Include="cpp\EditorWindows\SceneHeirarchyWindow.cpp">
       <Filter>cpp\EditorWindows</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\EditorWindows\AssetWindow.cpp">
+      <Filter>cpp</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
