--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 	path = JadeEngine/vendor/imguiVendor
 	url = https://github.com/ambrosiogabe/imgui
 	branch = docking
+[submodule "JadeEngine/vendor/monoVendor"]
+	path = JadeEngine/vendor/monoVendor
+	url = https://github.com/ambrosiogabe/mono
