--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=1443,698
+Size=1443,646
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,740
-Size=1443,340
+Pos=0,688
+Size=1443,329
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1445,1048
-Size=475,32
+Pos=1445,469
+Size=475,548
 Collapsed=0
 DockId=0x00000008,0
 
@@ -33,29 +33,30 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
-Pos=0,0
-Size=1920,1080
+Pos=-8,-8
+Size=960,540
 Collapsed=0
 
 [Window][Create New Project]
-Pos=307,209
+ViewportPos=315,240
+ViewportId=0x644D7B11
 Size=1083,522
 Collapsed=0
 
 [Window][Inspector]
 Pos=1445,40
-Size=475,1006
+Size=475,427
 Collapsed=0
 DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=503,588 Size=1920,1040 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,63 Size=1920,977 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0x7E7D78B8
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,646 Selected=0xAE7BB42F
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,329 Selected=0x7E7D78B8
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=Y Selected=0xA259292F
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,1350 Selected=0x42A639A8
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,643 CentralNode=1 Selected=0xA259292F
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,427 Selected=0x42A639A8
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,548 CentralNode=1 Selected=0xA259292F
 
