Add Styles Tab to Menu Bar

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -47,11 +47,16 @@ Size=475,987
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Styles]
+Pos=60,60
+Size=142,192
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,71 Size=1920,1021 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,686 Selected=0xAE7BB42F
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,333 Selected=0x7E7D78B8
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=475,722 Split=Y Selected=0xA259292F
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=Y Selected=0xA259292F
